--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^3.3.2",
     "lodash": "^4.17.21",
     "ngx-spinner": "^14.0.0",
+    "pdfmake": "^0.2.7",
     "primeflex": "^3.2.0",
     "primeicons": "6.0.1",
     "primeng": "14.1.2",
