--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve -o",
     "start-proxy": "ng serve -o --proxy-config proxy.conf.json",
     "build": "ng build",
+    "build-prod": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng build --aot --base-href /DetectPlate/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "~14.0.0",
     "@angular/platform-browser-dynamic": "~14.0.0",
     "@angular/router": "~14.0.0",
+    "@faker-js/faker": "^7.6.0",
     "chart.js": "^3.3.2",
     "lodash": "^4.17.21",
     "ngx-spinner": "^14.0.0",
